added docker + map of france

--- a/src/app/map/map.view.html
+++ b/src/app/map/map.view.html
@@ -1,6 +1,8 @@
+<div id="map"></div>
+
 <!-- <h1>Angular Gulp Boilerplate</h1>
 
-<h2>{{ 'home.greeting' | translate }}</h2> -->
+<h2>{{ 'home.greeting' | translate }}</h2>
 
 <p>
     {{ 'home.details' | translate }}
@@ -15,4 +17,4 @@
 
 <p>
     <button ng-click="vm.showSampleConstant()">{{ 'home.button' | translate }}</button>
-</p>
+</p> -->
