fixed api call issue

--- a/src/app/stats/stats.styles.scss
+++ b/src/app/stats/stats.styles.scss
@@ -46,6 +46,17 @@ stats {
       margin-right: 10px;
     }
 
+    .social-card {
+      .text {
+        span {
+          font-size: 0.6em;
+          vertical-align: middle;
+          color: grey;
+
+        }
+      }
+    }
+
     .position-card {
       width: 100%;
     }
