--- a/src/app/home/home.view.html
+++ b/src/app/home/home.view.html
@@ -1,18 +1,86 @@
-<!-- <h1>Angular Gulp Boilerplate</h1>
+<div class="home-container container-fluid">
+    <div class="content container">
 
-<h2>{{ 'home.greeting' | translate }}</h2> -->
+        <section class="top-page"> 
+            <!-- <img src="app/assets/images/topPage.png" alt="topPage"> -->
+            <img src="app/assets/images/topPage-logo.png" alt="TopPage Logo">
+    
+            <div class="sub-text">
+                <h1>Trouvez les statisques qu'il vous faut grâce à VisuAlerts</h1>
+                <h4>Achetez les bases de données à partir de nos critères de ciblage</h4>
+    
+                <div class="button"> <a href="#"> Je me lance</a></div>
+            </div>
+        </section>
+    
+        <section class="second-section">
+            <h2>Disposez de données précises pour réaliser vos campagnes et vos statisques</h2>
+    
+            <div class="desc">
+                <img src="app/assets/images/mockupImg.jpg" alt="Example Image">
+                <div class="text">
+                    <span>Avec VisuAlerts, achetez et créez vos bases de données sur mesure sur les accidents de la route en France.</span>
+                    <span> Nous recensons de nombreux critères de sélection (zones géographique, gravité des accidents, types
+                        d’incidents...)</span>
+                </div>
+            </div>
+        </section>
+    
+        <section class="third-section">
+            <h2>Quelques informations sur nos données</h2>
+    
+            <div class="icons-container">
+                <div class="icon">
+                    <img src="app/assets/images/localisation.png" alt="Localisation icon">
+                    <p>100% de nos informations sont géolocalisés</p>
+                </div>
+                <div class="icon"> 
+                    <img src="app/assets/images/statmaj.png" alt="Stat maj icon">
+                    <p>Nos statistiques sont mises à jour quotidiennement</p>
+                </div>
+                <div class="icon">
+                    <img src="app/assets/images/classeur.png" alt="Data icon">
+                    <p>Une classification de nos données en fonction de vos besoins</p>
+                </div>
+            </div>
+    
+            <div class="background-img"></div>
+            <div class="side-overlay left"></div>
+            <div class="side-overlay right"></div>
+        </section>
 
-<p>
-    {{ 'home.details' | translate }}
-    <a href="https://github.com/loginov-rocks/Angular-Gulp-Boilerplate"
-       target="_blank">https://github.com/loginov-rocks/Angular-Gulp-Boilerplate</a>
-</p>
+        <section class="fourth-section">
+            <h2>Comment ça marche ?</h2>
+    
+            <div class="picto-container">
+                <div class="picto">
+                    <img src="app/assets/images/choix.png" alt="Choice icon">
+                    <div class="text">
+                        <div>Etape 1 : Je choisis mes critères de ciblage</div>
+                        <p>Je sélectionne les données en fonction des critères de ciblages qui m’intéressent.</p>
+                    </div>
+                </div>
+                <div class="picto"> 
+                    <img src="app/assets/images/carte.png" alt="Payement card icon">
+                    <div class="text">
+                        <div>Etape 2 : Je valide ma commande</div>
+                        <p>J’accède à mon espace et je règle de façon sécurisée mon achat de fichier par carte bancaire.</p>
+                    </div>                
+                </div>
+                <div class="picto">
+                    <img src="app/assets/images/download.png" alt="Download icon">
+                    <div class="text">
+                        <div>Etape 3 : Je télécharge mon fichier de données</div>
+                        <p>J’accède au téléchargement de mon fichier sous 3 formats possibles (excel, csv, txt)</p>
+                    </div>
+                </div>
+            </div>
+    
+            <div class="background-img"></div>
+            <div class="side-overlay left"></div>
+            <div class="side-overlay right"></div>
+        </section>
 
-<p>
-    <button ng-click="vm.switchLanguage('en')">In English</button>
-    <button ng-click="vm.switchLanguage('ru')">По-русски</button>
-</p>
+    </div>
 
-<p>
-    <button ng-click="vm.showSampleConstant()">{{ 'home.button' | translate }}</button>
-</p>
+</div>
