--- a/src/app/home/home.styles.scss
+++ b/src/app/home/home.styles.scss
@@ -108,29 +108,14 @@
     }
 
     .background-img {
-      width: 120%;
+      width: 500%;
       height: 400px;
-      left: -36px;
-      top: -40px;
+      left: -58%;
+      top: -110px;
       position: absolute;
       background-color: #EAEAEA;
       z-index: 1;
       transform: rotate(-3deg);
-    }
-
-    .side-overlay {
-      width: 200px;
-      height: 1000px;
-      top: -120px;
-      position: absolute;
-      background-color: white;
-      z-index: 3;
-      &.left {
-          left: -210px;
-      }
-      &.right {
-          right: -210px;
-      }
     }
   }
 
