--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -7,6 +7,7 @@
 body {
   // font: normal 16px/150% Arial, Helvetica, sans-serif;
   font-family: 'Roboto', sans-serif;
+  overflow-x: hidden;
 
 }
 
