--- a/src/app/dashboard/dashboard.view.html
+++ b/src/app/dashboard/dashboard.view.html
@@ -1,4 +1,14 @@
 <header></header>
 <div id="map"></div>
 
-<stats region="vm.selectedRegion" stats="vm.stats"></stats>
+<div class="infos-wrapper">
+    <div class="date-selector">
+        <div>1 Semaine</div>
+        <div>1 Mois</div>
+        <div>3 Mois</div>
+        <div>6 Mois</div>
+        <div>1 An</div>
+
+    </div>
+    <stats region="vm.selectedRegion" stats="vm.stats"></stats>
+</div>
