--- a/src/app/dashboard/dashboard.styles.scss
+++ b/src/app/dashboard/dashboard.styles.scss
@@ -12,4 +12,25 @@ dashboard-page {
       fill : orange;
     }
   }
+  .infos-wrapper {
+    margin-top: 50px;
+    margin-left: 25px;
+    display: inline-block;
+    vertical-align: top;
+    .date-selector {
+      display: flex;
+      margin-bottom: 20px;
+      div {
+        margin: 0 5px;
+        font-size: 1.5em;
+        font-weight: 700;
+        border: 1px solid #FF954D;
+        border-radius: 6px;
+        text-align: center;
+        color: #FF954D;
+        flex: 1;
+  
+      }
+    }
+  }
 }
