--- a/src/app/dashboard/dashboard.view.html
+++ b/src/app/dashboard/dashboard.view.html
@@ -3,11 +3,20 @@
 
 <div class="infos-wrapper">
     <div class="date-selector">
-        <div>1 Semaine</div>
-        <div>1 Mois</div>
-        <div>3 Mois</div>
-        <div>6 Mois</div>
-        <div>1 An</div>
+        <input type="button" ng-class="{selected : vm.selectedDate === '1week'}" 
+        ng-click="vm.changeSelectedDate('1week', 1, 'weeks')"value="1 Semaine"></input>
+
+        <input type="button" ng-class="{selected : vm.selectedDate === '1month'}"
+        ng-click="vm.changeSelectedDate('1month', 1, 'months')" value="1 Mois"></input>
+
+        <input type="button" ng-class="{selected : vm.selectedDate === '3months'}"
+        ng-click="vm.changeSelectedDate('3months', 3, 'months')" value="3 Mois"></input>
+
+        <input type="button" ng-class="{selected : vm.selectedDate === '6months'}"
+        ng-click="vm.changeSelectedDate('6months', 6, 'months')" value="6 Mois"></input>
+
+        <input type="button" ng-class="{selected : vm.selectedDate === '1year'}"
+        ng-click="vm.changeSelectedDate('1year', 1, 'years')" value="1 An"></input>
 
     </div>
     <stats region="vm.selectedRegion" stats="vm.stats"></stats>
