--- a/src/app/dashboard/dashboard.styles.scss
+++ b/src/app/dashboard/dashboard.styles.scss
@@ -20,16 +20,23 @@ dashboard-page {
     .date-selector {
       display: flex;
       margin-bottom: 20px;
-      div {
+      input {
         margin: 0 5px;
         font-size: 1.5em;
         font-weight: 700;
         border: 1px solid #FF954D;
         border-radius: 6px;
+        background-color: white;
         text-align: center;
         color: #FF954D;
         flex: 1;
-  
+        &:focus {
+          outline: 0;
+        }
+        &.selected {
+          color: white;
+          background-color: #FF954D;
+        }
       }
     }
   }
