--- a/src/app/dashboard/dashboard.view.html
+++ b/src/app/dashboard/dashboard.view.html
@@ -19,5 +19,5 @@
         ng-click="vm.changeSelectedDate('1year', 1, 'years')" value="1 An"></input>
 
     </div>
-    <stats region="vm.selectedRegion" stats="vm.stats"></stats>
+    <stats region="vm.selectedRegion" stats="vm.stats" date-limit="vm.limitDate"></stats>
 </div>
