--- a/src/app/stats/stats.view.html
+++ b/src/app/stats/stats.view.html
@@ -7,14 +7,13 @@
             <h3>
                 <i class="far fa-calendar-alt"></i>
                 <div class="title">
-                    <span>Date </span>
+                    <span>Date</span>
                     <span class="underbar"></span>
                 </div>
-                <!-- <span class="underbar"></span> -->
             </h3>
 
             <div class="text">
-                20/03/2019 au 18/04/2019
+                {{ vm.dateLimit }} à Aujourd'hui
             </div>    
         </div>
         <div class="card social-card col-xs-6">
@@ -64,7 +63,7 @@
                     <span ng-if="vm.stats.nombre_accident"> {{vm.stats.nombre_accident}} </span>
                     <span ng-if="!vm.stats.nombre_accident"> - </span>
 
-                    <span>accidents motorisé</span>
+                    <span>accidents médiatisés</span>
                 </div>
 
                 <h6>dont</h6>
