--- a/src/app/stats/stats.view.html
+++ b/src/app/stats/stats.view.html
@@ -91,10 +91,13 @@
                 </div>
             </h3>
 
-            <div class="text graphique">
+            <svg id="graphique" style="width:100%;" height="300" width="300" >
 
-            </div>
-                
+            </svg>
+
+            <div class="c_chart"></div>
+
+
         </div>
     </div>
 </div>
