ongoing change to add filter to type of vehicule in the accident

--- a/src/app/home/home.view.html
+++ b/src/app/home/home.view.html
@@ -1,4 +1,9 @@
 <div class="home-container container-fluid">
+    <div class="dashboard-btn">
+       <a href="/dashboard">
+           <button>Accéder à mon dashboard</button>
+       </a>
+    </div>
     <div class="content container">
 
         <section class="top-page"> 
