--- a/src/app/stats/stats.view.html
+++ b/src/app/stats/stats.view.html
@@ -97,8 +97,9 @@
             </div>
         </div>
     </div>
-
+    
     <div class="row">
+        <div class="show-graph-btn" ng-click="vm.changeShowGraph()">Afficher plus</div>
         <div class="card graph-card col-xs-12">
             <h3>
                 <i class="fas fa-chart-bar"></i>
@@ -108,15 +109,14 @@
                 </div>
             </h3>
 
-            <svg id="graphique" style="width:100%;" height="300" width="800git " >
+            <svg id="graphique" style="width:100%;" height="300" width="800" >
 
             </svg>
 
             <div class="c_chart"></div>
-
-
         </div>
     </div>
+
 </div>
 
 
