--- a/src/app/media/media.view.html
+++ b/src/app/media/media.view.html
@@ -1,40 +1,42 @@
 <div class="home-container container-fluid">
     <div class="content container">
 
-        <section class="top-page"> 
+        <section class="top-page">
             <!-- <img src="app/assets/images/topPage.png" alt="topPage"> -->
             <img src="app/assets/images/topPage-logo.png" alt="TopPage Logo">
-    
+
             <div class="sub-text">
-                <h1>Trouvez les statisques qu'il vous faut grâce à VisuAlerts</h1>
-                <h4>Achetez les bases de données à partir de nos critères de ciblage</h4>
-    
+                <h1>L’actualité des accidents de la route au quotidien</h1>
+                <h4>Une solution simple et paramétrable pour analyser l’actualité des accidents de la route</h4>
+
                 <div class="button"> <a href="/dashboard"> Je me lance</a></div>
             </div>
         </section>
-    
+
         <section class="second-section">
-            <h2>Disposez de données précises pour réaliser vos campagnes et vos statisques</h2>
-    
+            <h2>Disposez de données précises pour rédiger vos articles et vos analyses.</h2>
+
             <div class="desc">
                 <img src="app/assets/images/mockupImg.jpg" alt="Example Image">
                 <div class="text">
-                    <span>Avec VisuAlerts, achetez et créez vos bases de données sur mesure sur les accidents de la route en France.</span>
-                    <span> Nous recensons de nombreux critères de sélection (zones géographique, gravité des accidents, types
-                        d’incidents...)</span>
+                    <span>Avec VisuAlerts, bénéficiez d’une base de données sur mesure sur les accidents de la route en
+                        France.</span>
+                    <span> Nous recensons de nombreux critères de sélection (zones géographiques, gravités des
+                        accidents, types d’incidents…) à travers les articles que nous collectons pour faciliter vos
+                        recherches et rédiger vos articles et analyse rapidement.</span>
                 </div>
             </div>
         </section>
-    
+
         <section class="third-section">
             <h2>Quelques informations sur nos données</h2>
-    
+
             <div class="icons-container">
                 <div class="icon">
                     <img src="app/assets/images/localisation.png" alt="Localisation icon">
                     <p>100% de nos informations sont géolocalisés</p>
                 </div>
-                <div class="icon"> 
+                <div class="icon">
                     <img src="app/assets/images/statmaj.png" alt="Stat maj icon">
                     <p>Nos statistiques sont mises à jour quotidiennement</p>
                 </div>
@@ -43,45 +45,48 @@
                     <p>Une classification de nos données en fonction de vos besoins</p>
                 </div>
             </div>
-    
+
             <div class="background-img"></div>
         </section>
 
         <section class="fourth-section">
             <h2>Comment ça marche ?</h2>
-    
+
             <div class="picto-container">
                 <div class="picto">
                     <div class="number">
                         <span>1</span>
                     </div>
-                    <img src="app/assets/images/choix.png" alt="Choice icon">
+                    <img src="app/assets/images/je_m_abonne.png" alt="Je m'abonne icon">
                     <div class="text">
-                        <div class="title">Etape 1 : Je choisis mes critères de ciblage</div>
-                        <p>Je sélectionne les données en fonction des critères de ciblages qui m’intéressent.</p>
+                        <div class="title">Etape 1 : Je m’abonne</div>
+                        <p>Je sélectionne mon type d’abonnement (mensuel ou annuel) et je règle de façon sécurisée par
+                            carte bancaire.</p>
                     </div>
                     <div class="my-vr"></div>
                 </div>
-                <div class="picto"> 
+                <div class="picto">
                     <div class="number">
                         <span>2</span>
                     </div>
-                    <img src="app/assets/images/carte.png" alt="Payement card icon">
+                    <img src="app/assets/images/mes_parametres.png" alt="My parameters icon">
                     <div class="text">
-                        <div class="title">Etape 2 : Je valide ma commande</div>
-                        <p>J’accède à mon espace et je règle de façon sécurisée mon achat de fichier par carte bancaire.</p>
-                    </div>       
+                        <div class="title">Etape 2 : Je définis mes paramètres</div>
+                        <p>Je sélectionne les filtres en fonction des critères selon mes préférences par zones
+                            géographiques ou gravité de l’accident par exemple.
+                        </p>
+                    </div>
                     <div class="my-vr"></div>
-         
+
                 </div>
                 <div class="picto">
                     <div class="number">
                         <span>3</span>
                     </div>
-                    <img src="app/assets/images/download.png" alt="Download icon">
+                    <img src="app/assets/images/mes_donnees.png" alt="My data icon">
                     <div class="text">
-                        <div class="title">Etape 3 : Je télécharge mon fichier de données</div>
-                        <p>J’accède au téléchargement de mon fichier sous 3 formats possibles (excel, csv, txt)</p>
+                        <div class="title">Etape 3 : J’obtiens les données que je désire</div>
+                        <p>J’observe et j’analyse les données que je souhaite en fonction de mes besoins du moment.</p>
                     </div>
                 </div>
             </div>
@@ -90,7 +95,7 @@
 
         <section class="last-section">
             <h2>Contactez-nous pour une recommandation sur mesure :</h2>
-        
+
             <div class="form-container">
                 <form action="/">
                     <div class="firstname">
