--- a/src/app/stats/stats.view.html
+++ b/src/app/stats/stats.view.html
@@ -2,8 +2,8 @@
 <div class="stats-container container">
     <!-- <h3>Région : {{ vm.region.nom }}</h3> -->
 
-    <div class="row">
-        <div class="card date-card col-xs-6">
+    <div class="row double-card">
+        <div class="card date-card">
             <h3>
                 <i class="far fa-calendar-alt"></i>
                 <div class="title">
@@ -16,11 +16,11 @@
                 {{ vm.dateLimit }} à Aujourd'hui
             </div>    
         </div>
-        <div class="card social-card col-xs-6">
+        <div class="card social-card">
             <h3>
                 <i class="far fa-star"></i>
                 <div class="title">
-                    <span>Popularité moyenne</span>
+                    <span>Popularité moy.</span>
                     <span class="underbar"></span>
                 </div>
             </h3>
@@ -99,8 +99,11 @@
     </div>
     
     <div class="row">
-        <div class="show-graph-btn" ng-click="vm.changeShowGraph()">Afficher plus</div>
-        <div class="card graph-card col-xs-12">
+        <div class="show-graph-btn" ng-click="vm.changeShowGraph()">
+            <div>Afficher plus</div>
+            <i class="fas fa-chevron-circle-down"></i>
+        </div>
+        <div class="card graph-card col-xs-12" ng-show="vm.showGraph">
             <h3>
                 <i class="fas fa-chart-bar"></i>
                 <div class="title">
