--- a/src/app/stats/stats.view.html
+++ b/src/app/stats/stats.view.html
@@ -81,25 +81,26 @@
                         <span ng-if="!vm.stats.nombre_accident_grave"> - </span>
                     </span>
                     <span ng-if="vm.displayedStats !== 'all'">
-                        <span ng-if="vm.stats.accidentsDisplayedGrave"> {{ vm.stats.accidentsDisplayedGrave }} </span>
-                        <span ng-if="!vm.stats.accidentsDisplayedGrave"> - </span>
+                        <span ng-if="vm.accidentsDisplayedGrave"> {{ vm.accidentsDisplayedGrave }} </span>
+                        <span ng-if="!vm.accidentsDisplayedGrave"> - </span>
                     </span>
+
                     <span>accidents graves</span>
                 </div>
             </div>
 
             <div class="filter-container">
                 <div class="filter-wrap">
-                    <div class="filter train" ng-click="vm.changeDisplayedStats('train','trainGrave')" ng-class="{ selected : vm.isActivatedFilter('train')}">
+                    <div class="filter train" ng-click="vm.changeDisplayedStats('train')" ng-class="{ selected : vm.isActivatedFilter('train')}">
                         <i class="fas fa-train"></i>
                     </div>
-                    <div class="filter car" ng-click="vm.changeDisplayedStats('voiture','voitureGrave')" ng-class="{ selected : vm.isActivatedFilter('voiture')}">
+                    <div class="filter car" ng-click="vm.changeDisplayedStats('voiture')" ng-class="{ selected : vm.isActivatedFilter('voiture')}">
                         <i class="fas fa-car-alt"></i>
                     </div>
-                    <div class="filter airplane" ng-click="vm.changeDisplayedStats('avion','avionGrave')" ng-class="{ selected : vm.isActivatedFilter('avion')}">
+                    <div class="filter airplane" ng-click="vm.changeDisplayedStats('avion')" ng-class="{ selected : vm.isActivatedFilter('avion')}">
                         <i class="fas fa-plane"></i>
                     </div>
-                    <div class="filter bike" ng-click="vm.changeDisplayedStats('moto','motoGrave')" ng-class="{ selected : vm.isActivatedFilter('moto')}">
+                    <div class="filter bike" ng-click="vm.changeDisplayedStats('moto')" ng-class="{ selected : vm.isActivatedFilter('moto')}">
                         <i class="fas fa-motorcycle"></i>
                     </div>
                 </div>
