added unfinised login

--- a/src/app/header/header.styles.scss
+++ b/src/app/header/header.styles.scss
@@ -17,11 +17,12 @@
             display: inline-block;
             cursor: pointer;
         }
-        .pres {
+        .user {
+             
             padding-right: 8px;
             border-right: 3px solid white;
-            border-left: 3px solid white;
-
+    
+            
         }
     }
 
