--- a/src/app/header/header.view.html
+++ b/src/app/header/header.view.html
@@ -5,9 +5,18 @@
     </a>
 
     <div class="right-panel">
-        <div class="login">
+        <div class="user">
+            <i class="fas fa-user"></i>
+            <span>{{ vm.userInfo.nom  + ' ' + vm.userInfo.prenom}}</span>
+        </div>
+        <div class="login" ng-click="vm.openLoginModal()" ng-if="!vm.isConnected()">
             <i class="fas fa-sign-in-alt"></i>
             <span>Connexion</span>
+        </div>
+
+        <div class="logout" ng-click="vm.logout()" ng-if="vm.isConnected()">
+            <i class="fas fa-sign-out-alt"></i>
+            <span>Déconnexion</span>
         </div>
     </div>
 </div>
