--- a/src/app/home/home.view.html
+++ b/src/app/home/home.view.html
@@ -14,7 +14,7 @@
                 <h1>Trouvez les statisques qu'il vous faut grâce à VisuAlerts</h1>
                 <h4>Achetez les bases de données à partir de nos critères de ciblage</h4>
     
-                <div class="button"> <a href="/dashboard"> Je me lance</a></div>
+                <div class="button"> <a href="#contact"> Je me lance</a></div>
             </div>
         </section>
     
@@ -93,7 +93,7 @@
         </section>
 
 
-        <section class="last-section">
+        <section class="last-section" id="contact">
             <h2>Contactez-nous pour une recommandation sur mesure :</h2>
         
             <div class="form-container">
